# vs-block

./: .gitignore  Cargo.toml
feature/chunk/: Cargo.toml
feature/chunk/src/: absolute_block_pos.rs  chunk.rs  chunk_block_pos.rs  chunk_iter.rs  chunk_iterator.rs  chunk_map.rs  chunk_neighbor_dir.rs  chunk_neighbors_iter.rs  chunk_neighbors_iterator.rs  chunk_pos.rs  lib.rs
feature/generic-assert/: Cargo.toml
feature/generic-assert/src/: lib.rs
feature/world/: Cargo.toml
feature/world-anchor/: Cargo.toml
feature/world-anchor/src/: lib.rs  world_anchor.rs  world_anchor_plugin.rs
main/: Cargo.toml
main/src/: camera.rs  key_binding.rs  main.rs
main/src/logic/: chunk.rs  mod.rs
main/src/logic/block/: block.rs  block_type.rs  mod.rs
main/src/logic/chunk/: chunk.rs  chunk_iterator.rs  mod.rs
main/src/logic/world/: chunk_coord.rs  mod.rs  world.rs  world_anchor.rs  world_plugin.rs
main/src/render/: block_face_mesh.rs  chunk_mesh_builder.rs  mesh_builder.rs  mod.rs  world_material_plugin.rs  world_render_plugin.rs
main/src/render/debug/: mod.rs  (+1 more)
src/: camera.rs  main.rs
src/logic/chunk/: chunk.rs  chunk_block_coord.rs  chunk_coord.rs  chunk_plugin.rs  mod.rs
src/logic/world/: chunk_coord.rs  mod.rs  world.rs  world_plugin.rs
src/render/: block_face_mesh.rs  chunk_render_plugin.rs  mesh_builder.rs  mod.rs  world_render_plugin.rs
src/render/debug/: debug_info_render_plugin.rs
src/world/: block.rs  chunk.rs  mod.rs
src/world/block/: block.rs
src/world/chunk/: chunk.rs  chunk_coord.rs  chunk_iterator.rs  chunk_plugin.rs  mod.rs
