[workspace]
members = [
    "feature/chunk",
    "feature/generic-assert",
    "feature/world-anchor",
    "main",
]

[workspace.dependencies]
bevy = "0.11"  # Основной графический движок
bevy_math = "0.11"  # Математические операции
rand = "0.8.5" # Генерация случайных чисел
noise = "0.8.2" # Разнообразные шумы (Перлина, FBM, итд)

[profile.dev.package."*"]
opt-level = 3