[workspace]
members = [
    "feature/chunk",
    "feature/world-anchor",
    "main",
]

[workspace.dependencies]
bevy = "0.11"  # Основной графический движок
bevy_math = "0.11"  # Математические операции
bevy_derive = "0.11.0"  # Полезные дерективы препроцессора, например, deref
rand = "0.8.5" # Генерация случайных чисел
noise = "0.8.2" # Разнообразные шумы (Перлина, FBM, итд)
strum_macros = "0.25.1" # Всякие полезные макросы, например, генератор итератора для enum
strum = "0.25.0"

[profile.dev.package."*"]
opt-level = 3